production-k8-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
