staging-k8-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
